adding some files, formatting cool graphic

--- a/styles/site.css
+++ b/styles/site.css
@@ -1,8 +1,10 @@
 
 html {
-    background-color: #c4def6;
+    /* background-color: #c4def6; */
     scroll-behavior: smooth;
    }
+
+
 
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -32,7 +34,7 @@ body {
     width: 100%; /* Set the width to occupy the full width of the viewport */
     box-sizing: border-box; /* Include padding in the width calculation */
     z-index: 1000; /* Set a high z-index value */
-    background-color: #c4def6;
+    background-color: 0xafd0ff;
 
 }
 
