--- a/styles/site2.css
+++ b/styles/site2.css
@@ -5,18 +5,16 @@ html {
 
 
 
-
-
 body {
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    /* margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; */
 }
 
 body {
-    font-family: "Lexend", sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
     font-size: 14px;
     font-weight: 300;
     font-style: normal;
@@ -37,7 +35,7 @@ body {
     position: fixed;
     top: 0; /* Ensure it sticks to the top of the page */
     padding: 15px;
-    width: 100%; /* Set the width to occupy the full width of the viewport */
+    width: 95%; /* Set the width to occupy the full width of the viewport */
     box-sizing: border-box; /* Include padding in the width calculation */
     z-index: 1000; /* Set a high z-index value */
     background-color: #afd0ff;
@@ -114,7 +112,7 @@ a {
     padding: 20px;
     padding-top:140px;
     position: relative;
-
+    margin-bottom: 200px;
 }
 
 .hi {
@@ -125,7 +123,7 @@ a {
     z-index: 1;
     font-family: "Plus Jakarta Sans", sans-serif;
     font-size: 95px;
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
     color: #2a45de;
 }
@@ -140,28 +138,45 @@ a {
     font-weight: 500;
     font-style: normal;
     color: #2a45de;
-
-}
-
-/*
-#profile-pic {
-
-    margin-right: 50px;
-
-} */
-
-.home-img {
-    /* border: 6px solid #2a45de;
-    border-radius: 15px;
-    overflow: hidden;
-    display: block; */
-
 }
 
 
 .content {
     text-align: center;
     max-width: 40%;
+}
+
+/* introduction */
+
+.introduction {
+    display: flex;
+    flex-direction: row;
+}
+
+.intro-text {
+    background-color: #d0f97d;
+    padding: 30px;
+    width: 60%;
+    margin-right: 9%;
+    border-radius: 50%;
+    text-align: center;
+    overflow: hidden;
+
+}
+
+.computer-svg {
+    display: block;
+    margin: auto;
+}
+
+.intro-text p {
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+
+.material-symbols-outlined {
+    font-size: 36px;
 }
 
 /* projects and experiences section */
