--- a/styles/site2.css
+++ b/styles/site2.css
@@ -280,7 +280,7 @@ h1, .pe-header {
 .skills-section {
     /* margin-top: 100px; */
     text-align: center;
-    padding-bottom: 100px;
+    margin-bottom: 100px;
 }
 
 .skills-boxes {
@@ -456,8 +456,10 @@ footer {
     padding: 20px 0;
     position: relative;
     bottom: -20px;
-    width: 103%;
+    width: 102%;
     left:-20px;
+    top:-30px;
+    margin-bottom: 30px;
 }
 
 .footer-container {
