adding 'pronounce', setting target="_blank"

--- a/styles/site2.css
+++ b/styles/site2.css
@@ -1,20 +1,11 @@
 html {
-    /* background-color: #c4def6; */
     scroll-behavior: smooth;
     background-color: #afd0ff;
    }
-/* 
-   .other-htmls {
-    background-color: #afd0ff;
-   } */
-
 
 body {
     justify-content: center;
     align-items: center;
-    /* margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px; */
 }
 
 body {
@@ -29,7 +20,6 @@ body {
 }
 
 
-
 /* Nav bar CSS */
 
 
@@ -37,11 +27,11 @@ body {
     display: flex;
     justify-content: space-between;
     position: fixed;
-    top: 0; /* Ensure it sticks to the top of the page */
+    top: 0;
     padding: 15px;
-    width: 95%; /* Set the width to occupy the full width of the viewport */
-    box-sizing: border-box; /* Include padding in the width calculation */
-    z-index: 1000; /* Set a high z-index value */
+    width: 95%;
+    box-sizing: border-box; 
+    z-index: 1000; 
     background-color: #afd0ff;
 
 }
@@ -51,7 +41,6 @@ body {
     margin-bottom: 500px;
 }
 
-/* Nav bar CSS */
 
 .nav-buttons {
     padding-right: 20px;
@@ -66,7 +55,7 @@ body {
 }
 
 .nav-buttons a:hover {
-    color: #2a45de; /* Purple text color on hover */
+    color: #2a45de;
 }
 
 .social-icons a {
@@ -74,7 +63,6 @@ body {
 }
 
 
-/* after a certain point the icons wrap - FIX */
 
 .social-icons img {
     width: 30px;
@@ -133,6 +121,12 @@ h1, .pe-header {
     left: 40%;
     z-index: 1;
 
+}
+
+.pronounce {
+    position: absolute;
+    top: 40%;
+    left: 80%;
 }
 
 .hi2 {
