--- a/styles/site2.css
+++ b/styles/site2.css
@@ -29,7 +29,7 @@ body {
     position: fixed;
     top: 0;
     padding: 15px;
-    width: 95%;
+    width: 100%;
     box-sizing: border-box; 
     z-index: 1000; 
     background-color: #afd0ff;
@@ -42,9 +42,9 @@ body {
 }
 
 
-.nav-buttons {
+/* .nav-buttons {
     padding-right: 20px;
-}
+} */
 
 
 .nav-buttons a {
