--- a/styles/site2.css
+++ b/styles/site2.css
@@ -41,26 +41,71 @@ body {
     margin-bottom: 500px;
 }
 
-#navbar-narrow {
+/* #navbar-narrow {
     display: none;
     right: 8%;
     padding: 10px;
     top: 30
-}
+} */
 
-#nav-arrow {
+/* #nav-arrow {
     color:#afd0ff;
     cursor: pointer;
 
-}
+} */
 
 
-#navbar-narrow a {
+/* #navbar-narrow a {
     font-size: 16px;
     color: #afd0ff;
     /* margin-top: 5px;
     margin-bottom: 5px; */
+/* } */
+
+#navOverlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
 }
+
+#navContent {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color:#2a45de;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+#closeNav {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    color: white;
+}
+
+#navContent ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#navContent ul li {
+    margin-bottom: 10px;
+}
+
+#navContent ul li a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
 
 
 
@@ -647,7 +692,7 @@ footer h4 {
     .intro-text {
         width: auto;
         margin-right: 0;
-        margin-top: 20px;
+        margin-top: 90px;
 
     }
 }
@@ -667,5 +712,9 @@ footer h4 {
     .skills-icon {
         margin-left: auto; 
         margin-right: auto; 
+    }
+
+    .brushstroke {
+        display: none;
     }
 }
