--- a/styles/site2.css
+++ b/styles/site2.css
@@ -692,7 +692,8 @@ footer h4 {
     .intro-text {
         width: auto;
         margin-right: 0;
-        margin-top: 90px;
+        margin-top: 60px;
+        margin-bottom: 60px;
 
     }
 }
