fixing projects and experiences formatting on home page

--- a/styles/site2.css
+++ b/styles/site2.css
@@ -216,9 +216,9 @@ a {
   padding-right: 8rem;
 }
 
-.home-text {
+/* .home-text {
     text-align: center;
-}
+} */
 
 .home-img {
   width: 500px;
@@ -247,14 +247,6 @@ h1, .pe-header {
 
 }
 
-/* OLD
-#hi {
-    position: absolute;
-    top: 10%;
-    left: 40%;
-    z-index: 1;
-
-} */
 #hi {
   margin: 0;
   font-size: 5rem;
@@ -267,12 +259,10 @@ h1, .pe-header {
 }
 
 .hi2 {
-    /* position: absolute; */
-    left: 10%;
     z-index: 1;
     font-family: "Plus Jakarta Sans", sans-serif;
-    font-size: 40px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 300;
     font-style: normal;
     color: #2a45de;
 }
@@ -302,10 +292,10 @@ h1, .pe-header {
 
 }
 
-.computer-svg {
+/* .computer-svg {
     display: none;
     margin: auto;
-}
+} */
 
 .intro-text p {
     font-size: 20px;
@@ -327,52 +317,45 @@ h1, .pe-header {
     margin-right: 20px;
 }
 
-.brushstroke {
-    width: 40%;
-    height: auto;
-    position: relative;
-}
 
-.brushstroke img {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    z-index: -1;
-}
-
-#brush1 {
-    left: -6%;
-}
-
-#brush2 {
-    left: 150%;
-}
-
-
- .pe-header:hover, .pe-box .pe-title:hover {
+ .pe-box .pe-title:hover {
     color: #d0f97d;
  }
 
  .pe-section {
     margin-bottom:200px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3rem;              /* space between the two columns */
+    padding: 2rem 1rem;
+    text-align: center;
+    flex-wrap: wrap;
  }
 
-
-/* projects page */
-
-.pe-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+ .pe-column {
+  width: 600px;           /* adjust width as needed */
+  text-align: center;
 }
 
+.pe-h1 {
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+
+.pe-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%; /* full width of the column */
+}
+
+
 .pe-box {
-    position: relative;
-    margin: 10px;
-    width: calc(25% - 20px);
-    max-width: 300px;
-    text-align: center;
-    overflow: hidden;
+  border-radius: 8px;
+  padding: 1rem;
+  width: 100%; /* boxes take full column width */
+  box-sizing: border-box;
 }
 
 .pe-overlay {
