--- a/styles/site2.css
+++ b/styles/site2.css
@@ -283,10 +283,10 @@ h1, .pe-header {
 .hi2 {
     z-index: 1;
     font-family: "Plus Jakarta Sans", sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 300;
     font-style: normal;
-    color: #2a45de;
+    color: #000000;
 }
 
 
