--- a/styles/site2.css
+++ b/styles/site2.css
@@ -640,6 +640,7 @@ footer h4 {
   .footer-bottom {
     text-align: center;
     margin-top: 20px;
+    padding-bottom: 5px;
 } 
 
 /* For changing screen sizes */
